Update index.html link to js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main id="quiz-container">
     </main>
-    <script src="./assets/js/script.js"></script>
+    <script src="./Assets/js/script.js"></script>
 </body>
 </html>
 
